--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<section class="area-login">
 			<div class="login">
 				<div>
-					<img src="/img/logo_github.png" alt="logotipo-github" />
+					<img src="logo_github.png" alt="logotipo-github" />
 				</div>
 				<form action="#" method="post">
 					<input
