--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="/estilos/style.css" />
 		<title>Tela de Login</title>
 	</head>
 	<body>
 		<section class="area-login">
 			<div class="login">
 				<div>
-					<img src="logo_github.png" alt="logotipo-github" />
+					<img src="/img/logo_github.png" alt="logotipo-github" />
 				</div>
 				<form action="#" method="post">
 					<input
